# Backtest

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  celery_app.py  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: analysis.py  health_data.py  interventions.py  router.py
backend/app/api/v1/endpoints/: analysis.py  health_data.py  interventions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  analysis_result.py  data_import.py  health_metric.py  intervention.py  user.py
backend/app/schemas/: analysis.py  data_import.py  health_metric.py  intervention.py
backend/app/services/: analysis_service.py  health_data_service.py  health_parser.py  insight_generator.py  intervention_service.py
backend/app/tasks/: health_data_tasks.py
backend/app/utils/: health_parser.py
backend/app/workers/: celery_app.py  health_data_worker.py
backend/scripts/: init_db.py  init_db.sh  setup_timescaledb.sql
docs/: DEPLOYMENT.md  SETUP.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/interventions/[id]/: page.tsx
frontend/app/interventions/new/: page.tsx
frontend/lib/: api.ts  types.ts
