[tool.poetry]
name = "intervention-testing-backend"
version = "0.1.0"
description = "Backend API for intervention testing platform"
authors = ["Your Name <you@example.com>"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
